# ultimate-scale

./: .gitignore  Cargo.toml  README.md  TODO.md
resources/: cool_opening.blend  models.blend  pipe_bend.mtl  pipe_seg.mtl
src/: config.rs  edit_camera_view.rs  game.rs  game_state.rs  grid.rs  input_state.rs  machine.rs  main.rs  vec_option.rs
src/edit/: action.rs  config.rs  editor.rs  mod.rs  mode.rs  pick.rs  piece.rs  render.rs  ui.rs
src/edit/editor/: action.rs  mod.rs  render.rs  ui.rs
src/exec/: anim.rs  level.rs  level_progress.rs  mod.rs  neighbors.rs  play.rs  tests.rs  view.rs
src/exec/view/: blip_anim.rs  event.rs  mod.rs
src/game/: draw.rs  mod.rs  ui.rs  update.rs
src/machine/: exec.rs  grid.rs  level.rs  mod.rs  render.rs  string_util.rs
src/render/: floor.rs  machine.rs  mod.rs  wind.rs
src/render/pipeline/: mod.rs
src/util/: anim.rs  intersection.rs  mod.rs  profile.rs  stats.rs  timer.rs  vec_option.rs
test_machines/: activate_at_same_time.json  beats_me_level.json  bit.json  bit_read_flip.json  bit_read_flip_set.json  blip_deleter.json  buffer_work.json  christmas.json  clock.json  clock_level.json  clocks.json  crossing.json  crossings.json  detector_copier.json  falling_blips.json  falling_extravaganza.json  from_top_duplicator_fail.json  funnel.json  hilbert.json  id_3.json  left_right_thinkingface.json  merge.json  mod_10.json  mod_3.json  mul_by_3_level.json  mul_by_3_level_awesome_buffer.json  mul_by_3_level_new.json  mul_by_3_level_nice_buffer.json  mul_by_3_level_turn.json  o_beats_g.json  particle_test.json  sort.json  split_merge.json  splitmania.json  straight.json  straight_flow.json  stress.json  stress_blips.json  stress_wind_source.json  swap_3.json  (+7 more)
