[package]
name = "ultimate-scale"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = { version = "0.18", features = ["serde-serialize"] }
glium = "0.25"
num-traits = "0.2"
num-derive = "0.2"
log = "0.4"
simple_logger = "1.0"
floating-duration = "0.1"
obj = { version = "0.9", features = ["genmesh"] }
genmesh = "0.6"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imgui = "0.2.1"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.0"
maplit = "1.0"
rand = "0.7"
glsl = "3.0"
pareen = "0.1"
coarse-prof = "0.2"

[profile.dev]
opt-level = 1
